@@ -14,6 +14,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Changed the message from the confirm CGI to not indicate approval is
+      required for an acceptance of an invitation.  (LP: #1277744)
+
     - Fixed POSTFIX_STYLE_VIRTUAL_DOMAINS to be case-insensitiive.
       (LP: #1267003)
 
